--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --exit"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -21,6 +22,6 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "mocha": "^8.2.0"
+    "mocha": "^8.4.0"
   }
 }
